aqp_platform/deployments/kubernetes/bots-operator/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantbot-operator-webhook
  namespace: aqp-bots
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: quantbot-operator
    app.kubernetes.io/component: operator
  ports:
    - name: webhook
      port: 443
      targetPort: webhook
      protocol: TCP
